Adding create user

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -169,6 +169,11 @@
 
     <!-- Init material Bootstrap -->
     <script type="text/javascript">$.material.init()</script>
+    <script type="text/javascript">
+        $('.text_wysiwyg').summernote({
+            height: 200
+        });
+    </script>
 </body>
 
 </html>
