Adding update user

--- a/users/templates/users/list.html
+++ b/users/templates/users/list.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col-md-3">
                         <div align="right">
-                            <a href="#" class="btn btn-primary btn-raised btn-sm"><i class="fa fa-edit"></i> {% trans 'Edit' %}</a>
+                            <a href="{% url 'users:update' acc.email %}" class="btn btn-primary btn-raised btn-sm"><i class="fa fa-edit"></i> {% trans 'Edit' %}</a>
                             <a href="javascript:void(0)" class="btn btn-default btn-raised btn-sm" data-toggle="modal" data-target="#DeleteModal{{ forloop.counter }}"><i class="fa fa-trash"></i> {% trans 'Delete' %}</a>
                         </div>
                     </div>
